--- a/index.html
+++ b/index.html
@@ -31,8 +31,94 @@
     </main>
     <main>
         <h3>Promoção</h3>
-
-    </main>
+        <p>Confira nossas ofertas em periféricos de PC:</p>
+        <ul id = "promotionlist">
+            <li>Mouse Gamer: R$ 50,00</li>
+            <li>Teclado Mecânico: R$ 100,00</li>
+            <li>Fone de Ouvido Gamer: R$ 80,00</li>
+        </ul>
     
+    </main>
+    <!-- container aqui  -->
+    <div class="product-list-section">
+        <h2>Produtos</h2>
+        <!-- <div class="product-filter"> -->
+          <!-- <label for="price-filter">Filtrar por Preço:</label> -->
+          <!-- <select id="price-filter"> -->
+            <!-- <option value="low-to-high">Menor para o Maior</option> -->
+            <!-- <option value="high-to-low">Maior para o Menor</option> -->
+          </select>
+        </div class = "Products">
+            <!-- LIST 1 -->
+            <ul class="product-list1">
+                <li>
+                <img src="mouse-gamer.jpg" alt="Mouse Gamer">
+                <h3>Mouse Gamer</h3>
+                <p>R$ 50,00</p>
+                <button>Comprar</button>
+
+                </li>
+                <li>
+                <img src="teclado-mecanico.jpg" alt="Teclado Mecânico">
+                <h3>Teclado Mecânico</h3>
+                <p>R$ 100,00</p>
+                <button>Comprar</button>
+                </li>
+                <li>
+                <img src="fone-gamer.jpg" alt="Fone de Ouvido Gamer">
+                <h3>Fone de Ouvido Gamer</h3>
+                <p>R$ 80,00</p>
+                <button>Comprar</button>
+                </li>
+                <li>
+                    <img src="mousepad-gamer.jpg" alt="Mousepad Gamer">
+                    <h3>Mousepad Gamer</h3>
+                    <p>R$ 20,00</p>
+                    <button>Comprar</button>
+                </li>
+                <li>
+                    <img src="microfone-gamer.jpg" alt="Microfone Gamer">
+                    <h3>Microfone Gamer</h3>
+                    <p>R$ 150,00</p>
+                    <button>Comprar</button>
+                </li>
+                </ul>
+            <ul class="product-list2">
+                <li> 
+                <img src="caixa-som-gamer.jpg" alt="Caixa de Som Gamer">
+                <h3>Caixa de Som Gamer</h3>
+                <p>R$ 200,00</p>
+                <button>Comprar</button>
+                </li>
+                <li>
+                <img src="notebook-gamer.jpg" alt="Notebook Gamer">
+                <h3>Notebook Gamer</h3>
+                <p>R$ 4.000,00</p>
+                <button>Comprar</button>
+                </li>
+                <li>
+                <img src="processador.jpg" alt="Processador">
+                <h3>Processador</h3>
+                <p>R$ 1.500,00</p>
+                <button>Comprar</button>
+                </li>
+                <li>
+                <img src="placa-video.jpg" alt="Placa de Vídeo">
+                <h3>Placa de Vídeo</h3>
+                <p>R$ 2.000,00</p>
+                <button>Comprar</button>
+                </li>        
+            </ul>
+          </ul>
+          <div class="shipping-section">
+            <label for="cep-input">Calcule o frete:</label>
+            <input type="text" id="cep-input" placeholder="Digite seu CEP">
+            <button id="calc-button">Calcular</button>
+            <p id="shipping-cost"></p>
+          </div>
+        </div>
+      </div>
+    
+    <script src="script.js"></script>
 </body>
 </html>
