Atualização parte da manha

--- a/teste.html
+++ b/teste.html
@@ -29,11 +29,11 @@
         
         <div class="product-list-section">
           <h2>Produtos</h2>
-          <div class="product-filter">
-            <label for="price-filter">Filtrar por Preço:</label>
-            <select id="price-filter">
-              <option value="low-to-high">Menor para o Maior</option>
-              <option value="high-to-low">Maior para o Menor</option>
+          <!-- <div class="product-filter"> -->
+            <!-- <label for="price-filter">Filtrar por Preço:</label> //isso daqui era pra filtrar o preço-->
+            <!-- <select id="price-filter"> -->
+              <!-- <option value="low-to-high">Menor para o Maior</option> -->
+              <!-- <option value="high-to-low">Maior para o Menor</option> -->
             </select>
           </div>
           <ul class="product-list">
@@ -52,6 +52,7 @@
               <h3>Fone de Ouvido Gamer</h3>
               <p>R$ 80,00</p>
             </li>
+            
           </ul>
           <div class="shipping-section">
             <label for="cep-input">Calcule o frete:</label>
