--- a/trabalhos/index/index.html
+++ b/trabalhos/index/index.html
@@ -52,26 +52,26 @@
             <!-- LIST 1 -->
             <ul class="product-list1">
                 <li>
-                <img src="mouse-gamer.jpg" alt="Mouse Gamer">
+                <img src="img/mouse-gamer.jpg" alt="Mouse Gamer">
                 <h3>Mouse Gamer</h3>
                 <p>R$ 50,00</p>
                 <button>Comprar</button>
 
                 </li>
                 <li>
-                <img src="teclado-mecanico.jpg" alt="Teclado Mecânico">
+                <img src="img/teclado-mecanico.jpg" alt="Teclado Mecânico">
                 <h3>Teclado Mecânico</h3>
                 <p>R$ 100,00</p>
                 <button>Comprar</button>
                 </li>
                 <li>
-                <img src="fone-gamer.jpg" alt="Fone de Ouvido Gamer">
+                <img src="img/fone-gamer.jpg" alt="Fone de Ouvido Gamer">
                 <h3>Fone de Ouvido Gamer</h3>
                 <p>R$ 80,00</p>
                 <button>Comprar</button>
                 </li>
                 <li>
-                    <img src="mousepad-gamer.jpg" alt="Mousepad Gamer">
+                    <img src="img/mousepad-gamer.jpg" alt="Mousepad Gamer">
                     <h3>Mousepad Gamer</h3>
                     <p>R$ 20,00</p>
                     <button>Comprar</button>
@@ -85,25 +85,25 @@
                 </ul>
             <ul class="product-list2">
                 <li> 
-                <img src="caixa-som-gamer.jpg" alt="Caixa de Som Gamer">
+                <img src="img/caixa-som-gamer.jpg" alt="Caixa de Som Gamer">
                 <h3>Caixa de Som Gamer</h3>
                 <p>R$ 200,00</p>
                 <button>Comprar</button>
                 </li>
                 <li>
-                <img src="notebook-gamer.jpg" alt="Notebook Gamer">
+                <img src="img/notebook-gamer.jpg" alt="Notebook Gamer">
                 <h3>Notebook Gamer</h3>
                 <p>R$ 4.000,00</p>
                 <button>Comprar</button>
                 </li>
                 <li>
-                <img src="processador.jpg" alt="Processador">
+                <img src="img/processador.jpg" alt="Processador">
                 <h3>Processador</h3>
                 <p>R$ 1.500,00</p>
                 <button>Comprar</button>
                 </li>
                 <li>
-                <img src="placa-video.jpg" alt="Placa de Vídeo">
+                <img src="img/placa-video.jpg" alt="Placa de Vídeo">
                 <h3>Placa de Vídeo</h3>
                 <p>R$ 2.000,00</p>
                 <button>Comprar</button>
