--- a/trabalhos/login.html
+++ b/trabalhos/login.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="login.css">
 </head>
 <body>
-    <a href="index.html">principal</a>
-    <div><h1><big><big>Loja Virtual</big></big></h1></div>
+    <a href="index/index.html">principal</a>
+    <div><h1><big><big>PicaMarket</big></big></h1></div>
     <header>
         <h1>LOGIN</h1>
     </header>
@@ -21,9 +21,9 @@
             <label for="senha" id="ambos">Senha:</label> <br>
             <input id="senha" type="password" placeholder="Senha"><br>
             <input type="button" value="Entrar" id="entrar"><br>
-            <label for="" id="login">Não possui login?</label>
-            <input type="button" value="Cadastre-se" id="cadastro" >
+            <p class="text-muted">Não possui login? <a href="registrar.html" class="text-muted ms-1"><b>Cadastre-se</b></a></p>
         </form>
     </main>
+
 </body>
 </html>
