Ajustando pastas e caminhos

--- a/trabalhos/HTML/registrar.html
+++ b/trabalhos/HTML/registrar.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Icons css -->
-    <link href="regist.css" rel="stylesheet" type="text/css" />
+    <link href="/trabalhos/CSS/regist.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body class="authentication-bg pb-0">
