--- a/trabalhos/HTML/index.html
+++ b/trabalhos/HTML/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Principal</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="/trabalhos/CSS/main.css">
 </head>
 <body>
     <header>
@@ -21,7 +21,7 @@
         </div>
         <div id = "div2">
             <a href="#" class="link" >Carrinho</a>
-            <a href="login.html" class="link">Login</a>
+            <a href="/trabalhos/HTML/login.html" class="link">Login</a>
         </div>
     </nav>
 
