--- a/trabalhos/HTML/login.html
+++ b/trabalhos/HTML/login.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LOGIN</title>
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="/trabalhos/CSS/login.css">
 </head>
 <body>
-    <a href="index/index.html">principal</a>
+    <a href="/trabalhos/HTML/index.html">principal</a>
     <div><h1><big><big>PicaMarket</big></big></h1></div>
     <header>
         <h1>LOGIN</h1>
