--- a/trabalhos/HTML/index.html
+++ b/trabalhos/HTML/index.html
@@ -27,18 +27,22 @@
 
 
     <aside id="destaque">
-        <h3>Destaque</h3>
-
+        <h3>Destaques</h3>
     </aside>
-    <aside>
-        <h3>Promoção</h3>
-        <p>Confira nossas ofertas em periféricos de PC:</p>
-        <ul id = "promotionlist">
-            <li>Mouse Gamer: R$ 50,00</li>
-            <li>Teclado Mecânico: R$ 100,00</li>
-            <li>Fone de Ouvido Gamer: R$ 80,00</li>
-        </ul>
-    </aside id="promocao">
+        <main>
+            <h3>Promoção</h3>
+            <p>Confira nossas ofertas em periféricos de PC:</p>
+            <ul id = "promotionlist">
+                <li>Mouse Gamer: R$ 50,00</li>
+                <li>Teclado Mecânico: R$ 100,00</li>
+                <li>Fone de Ouvido Gamer: R$ 80,00</li>
+            </ul>
+        </main>
+    
+    
+
+
+
     <!-- container aqui  -->
     <div class="product-list-section">
         <h2>Produtos</h2>
