--- a/trabalhos/HTML/login.html
+++ b/trabalhos/HTML/login.html
@@ -21,7 +21,9 @@
             <label for="senha" id="ambos">Senha:</label> <br>
             <input id="senha" type="password" placeholder="Senha"><br>
             <input type="button" value="Entrar" id="entrar"><br>
+            <p class="text-muted">Esqueceu a senha? <a href="redefinir.html" class="text-muted ms-1"><b>Redefinir</b></a></p> 
             <p class="text-muted">Não possui login? <a href="registrar.html" class="text-muted ms-1"><b>Cadastre-se</b></a></p>
+            
         </form>
     </main>
 
