--- a/trabalhos/HTML/index.html
+++ b/trabalhos/HTML/index.html
@@ -179,6 +179,6 @@
       </div>
       </article>
     
-    <script src="script.js"></script>
+    <script src="JS/script.js"></script>
 </body>
 </html>
