--- a/trabalhos/HTML/login.html
+++ b/trabalhos/HTML/login.html
@@ -15,17 +15,19 @@
     </header>
 
     <main>
-        <form action="">
+        <form id="login-form" action="">
+
             <label for="email" id="ambos">E-mail:</label> <br>
             <input id="email" type="email" placeholder="E-mail"><br>
             <label for="senha" id="ambos">Senha:</label> <br>
             <input id="senha" type="password" placeholder="Senha"><br>
-            <input type="button" value="Entrar" id="entrar"><br>
+            <input type="submit" value="Entrar" id="entrar"><br>
             <p class="text-muted">Esqueceu a senha? <a href="redefinir.html" class="text-muted ms-1"><b>Redefinir</b></a></p> 
             <p class="text-muted">Não possui login? <a href="registrar.html" class="text-muted ms-1"><b>Cadastre-se</b></a></p>
             
         </form>
     </main>
 
+    <script src="JS/log.js"></script>
 </body>
 </html>
