--- a/trabalhos/HTML/login.html
+++ b/trabalhos/HTML/login.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <a href="/trabalhos/HTML/index.html">principal</a>
-    <div><h1><big><big>Market</big></big></h1></div>
+    <div><h1><big><big>PixelStore</big></big></h1></div>
+    <h2>A loja que tem preços de outro planeta</h2>
     <header>
         <h1>LOGIN</h1>
     </header>
