--- a/trabalhos/HTML/registrar.html
+++ b/trabalhos/HTML/registrar.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="https://cdn.materialdesignicons.com/5.4.55/css/materialdesignicons.min.css">
 <head>
     <meta charset="utf-8" />
-    <title>Register | Hyper - Responsive Bootstrap 5 Admin Dashboard</title>
+    <title>Registrar</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Icons css -->
