--- a/trabalhos/HTML/index.html
+++ b/trabalhos/HTML/index.html
@@ -21,7 +21,9 @@
       </div>
     </div>
     <div class="content" id="content">
-      <h1>Pixel A Melhor loja de eletrônicos</h1>
+      <h1>PixelStore</h1>
+      <h2>A Melhor loja de eletrônicos do Universo</h2>
+
     </div>
     
 
@@ -73,14 +75,14 @@
 
       <!-- container aqui  -->
     <div>
-      <div class="product-list-section">
+      <!-- <div class="product-list-section">
           <h2>Produtos</h2>
           <div class="product-filter">
             <label for="price-filter">Filtrar por Preço:</label>
             <select id="price-filter">
               <option value="low-to-high">Menor para o Maior</option>
               <option value="high-to-low">Maior para o Menor</option>
-            </select>
+            </select> -->
           </div class = "Products">
               <!-- LIST 1 -->    
               <div class="product-grid">
