--- a/trabalhos/HTML/carrinho.html
+++ b/trabalhos/HTML/carrinho.html
@@ -21,8 +21,7 @@
       </tbody>
       <tfoot>
         <tr>
-          <td>Total:</td>
-          <td>R$ 0,00</td>
+          
         </tr>
       </tfoot>
     </table>
@@ -30,6 +29,7 @@
     <button id="clear-cart">Limpar carrinho</button>
     <button id="buy-cart">Finalizar compra</button>
   </div>
+  <script src ="JS/script.js"></script>
   <script src="JS/car.js"></script>
 </body>
 </html>
