--- a/trabalhos/HTML/index.html
+++ b/trabalhos/HTML/index.html
@@ -11,7 +11,7 @@
 
     <div class="header" id="header">
       <div class="logo_header">
-        <img src="/trabalhos/HTML/img/logo.jpg" alt="">
+        <img src="/trabalhos/CSS/img/favicon.png" alt="">
       </div>
       <div class="navigation_header">
         <a href="/trabalhos/HTML/index.html" class="active">Home</a>
