--- a/trabalhos/HTML/carrinho.html
+++ b/trabalhos/HTML/carrinho.html
@@ -27,7 +27,8 @@
     </table>
     <p>Total da compra: R$ 0,00</p>
     <button id="clear-cart">Limpar carrinho</button>
-    <button id="buy-cart">Finalizar compra</button>
+    <button id="buy-cart" href="/trabalhos/HTML/fin.html">Finalizar compra</button>
+
   </div>
   <script src ="JS/script.js"></script>
   <script src="JS/car.js"></script>
