--- a/trabalhos/HTML/index.html
+++ b/trabalhos/HTML/index.html
@@ -17,7 +17,7 @@
         <a href="/trabalhos/HTML/index.html" class="active">Home</a>
         <a href="/trabalhos/HTML/login.html" >Login</a>
         <a href="/trabalhos/HTML/carrinho.html">Carrinho</a>
-        <a href="#">Contato</a>
+        <a href="/trabalhos//HTML/contato.html">Contato</a>
       </div>
     </div>
     <div class="content" id="content">
