--- a/trabalhos/HTML/contato.html
+++ b/trabalhos/HTML/contato.html
@@ -11,16 +11,16 @@
 		<div class="profile">
 			<h2>Danilo Suzano</h2>
 			<img src="img/danilo.jpg" alt="Foto de Danilo">
-			<p>Matrícula: </p>
-			<p>Idade: 20 anos</p>
-			<p>Email: danilo@suzano.com</p>
+			<p>Matrícula:202211154 </p>
+			<p>Idade: 19 anos</p>
+			
 		</div>
 		<div class="profile">
 			<h2>Pedro  Reis</h2>
 			<img src="img/pedro.jpg" alt="Foto de Pedro">
 			<p>Matrícula: 202220818</p>
 			<p>Idade: 20 anos</p>
-			<p>Email: pedrolucas2012@gmail.com</p>
+			
 		</div>
 	</div>
 </body>
