--- a/trabalhos/HTML/registrar.html
+++ b/trabalhos/HTML/registrar.html
@@ -33,7 +33,7 @@
                     <form action="#">
                         <div class="mb-3">
                             <label for="fullname" class="form-label">Nome Completo</label>
-                            <input class="form-control" type="text" id="fullname" placeholder="Seu Nome completo" required>
+                            <input class="form-control" type="text" id="fullname" placeholder="Seu nome completo" required>
                         </div>
                         <div class="mb-3">
                             <label for="emailaddress" class="form-label">Endereço de Email</label>
