--- a/trabalhos/HTML/contato.html
+++ b/trabalhos/HTML/contato.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>Criadores do Site</title>
 	<link rel="stylesheet" href="/trabalhos/CSS/contato.css">
 </head>
