ultimo passo att 03/04
Comentei e terminei

--- a/trabalhos/HTML/contato.html
+++ b/trabalhos/HTML/contato.html
@@ -5,6 +5,7 @@
 	<title>Criadores do Site</title>
 	<link rel="stylesheet" href="/trabalhos/CSS/contato.css">
 </head>
+<!-- Aqui é algo bem simples mesmo,só pra dar crédito aos criadores(Eu e Danilo) -->
 <body>
 	<h1>Criadores do Site</h1>
 	<p>Conheça os criadores deste site:</p>
