--- a/trabalhos/HTML/index.html
+++ b/trabalhos/HTML/index.html
@@ -7,6 +7,8 @@
     <title>Principal</title>
     <link rel="stylesheet" href="/trabalhos/CSS/main.css">
   </head>
+  <!-- A Historia por trás do nosso site se trata de um alienigina do planeta 2d que veio ao nosso universo para vender produtos eletronicos
+  os preços são diferenciados por se tratar de um ser que nunca se envolveu com esse tipo de tecnologia... -->
   <body>
 
     <div class="header" id="header">
@@ -75,14 +77,7 @@
 
       <!-- container aqui  -->
     <div>
-      <!-- <div class="product-list-section">
-          <h2>Produtos</h2>
-          <div class="product-filter">
-            <label for="price-filter">Filtrar por Preço:</label>
-            <select id="price-filter">
-              <option value="low-to-high">Menor para o Maior</option>
-              <option value="high-to-low">Maior para o Menor</option>
-            </select> -->
+      <!-- Segue os 18 produtos abaixo(Sei que eu exagerei) -->
           </div class = "Products">
               <!-- LIST 1 -->    
               <div class="product-grid">
@@ -203,15 +198,10 @@
                   </div>
               </div>
             </ul>
-            <!-- <div class="shipping-section">
-              <label for="cep-input">Calcule o frete:</label>
-              <input type="text" id="cep-input" placeholder="Digite seu CEP">
-              <button id="calc-button">Calcular</button>
-              <p id="shipping-cost"></p>
-            </div> -->
           </div>
         </div>
       </div>
+      <!-- Esse script linkará com outros -->
       <script src="JS/script.js"></script>
   </body>
 </html>
