--- a/trabalhos/HTML/login.html
+++ b/trabalhos/HTML/login.html
@@ -28,7 +28,7 @@
             
         </form>
     </main>
-
+    <!-- O Script usa o LocalStorage  -->
     <script src="JS/log.js"></script>
 </body>
 </html>
