--- a/trabalhos/HTML/registrar.html
+++ b/trabalhos/HTML/registrar.html
@@ -82,7 +82,7 @@
             </div> 
         </div>
         </div>
-        
+        <!-- Esse script sera usado depois pois as variaveis globais dele serao inseridas junto com o localstorage para serem usadas no login -->
     <script src="JS/reg.js"></script>
 </body>
 
