--- a/trabalhos/HTML/redefinir.html
+++ b/trabalhos/HTML/redefinir.html
@@ -7,6 +7,7 @@
     
     
   </head>
+  <!-- Conceitual,Nao consegui criar o codigo que redefine,mas sei como faze-lo...so que priorizei outras coisas e nao deu tempo -->
   <body>
     <div class="container">
       <h1>Redefinir senha</h1>
