--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <img src="/trabalhos/CSS/img/favicon.png" alt="">
       </div>
       <div class="navigation_header">
-        <a href="/trabalhos/HTML/index.html" class="active">Home</a>
-        <a href="/trabalhos/HTML/login.html" >Login</a>
-        <a href="/trabalhos/HTML/carrinho.html">Carrinho</a>
-        <a href="/trabalhos//HTML/contato.html">Contato</a>
+        <a href="index.html" class="active">Home</a>
+        <a href="trabalhos/HTML/login.html" >Login</a>
+        <a href="trabalhos/HTML/carrinho.html">Carrinho</a>
+        <a href="trabalhos//HTML/contato.html">Contato</a>
       </div>
     </div>
     <div class="content" id="content">
@@ -46,17 +46,17 @@
               <div class="product first">
                 <p class="name">Mouse Gamer</p>
                 <p class="price"><s>R$80</s> R$50</p>
-                <img src="img/mouse_slider.webp" alt="Mouse Gamer" id="mouse">
+                <img src="trabalhos/HTML/img/mouse_slider.webp" alt="Mouse Gamer" id="mouse">
               </div>
               <div class="product">
                 <p class="name">Teclado Mecânico</p>
                 <p class="price"><s>R$150</s> R$100</p>
-                <img src="img/teclado_slider.jpg" alt="Teclado Mecânico">
+                <img src="trabalhos/HTML/img/teclado_slider.jpg" alt="Teclado Mecânico">
               </div>
               <div class="product">
                 <p class="name">Fone de Ouvido Gamer</p>
                 <p class="price"><s>R$200</s> R$80</p>
-                <img src="img/hyper_slider2.jpg" alt="Fone de Ouvido Gamer" id="fone">
+                <img src="trabalhos/HTML/img/hyper_slider2.jpg" alt="Fone de Ouvido Gamer" id="fone">
               </div>
 
               <div class="navigation_auto">
@@ -82,37 +82,37 @@
               <!-- LIST 1 -->    
               <div class="product-grid">
                   <div class="product-grid-item">
-                    <img src="img/imagem-produto-1.jpg" alt="Mouse" id="imagens">
+                    <img src="trabalhos/HTML/img/imagem-produto-1.jpg" alt="Fone" id="imagens">
                     <h3>Fone (black)</h3>
                     <p class="price">R$ 320,00</p>
                     <button class="buy-button" data-quantity="0">Comprar</button>
                   </div>
                   <div class="product-grid-item">
-                    <img src="img/imagem-produto-2.jpg" alt="Teclado" id="imagens">
+                    <img src="trabalhos/HTML/img/imagem-produto-2.jpg" alt="Teclado" id="imagens">
                     <h3>Mouse X</h3>
                     <p class="price">R$ 200,00</p>
                     <button class="buy-button" data-quantity="0">Comprar</button>
                   </div>
                   <div class="product-grid-item">
-                    <img src="img/imagem-produto-3.jpg" alt="HeadSet" id="imagens">
+                    <img src="trabalhos/HTML/img/imagem-produto-3.jpg" alt="HeadSet" id="imagens">
                     <h3>Teclado</h3>
                     <p class="price">R$ 300,00</p>
                     <button class="buy-button" data-quantity="0">Comprar</button>
                   </div>
                   <div class="product-grid-item">
-                    <img src="img/imagem-produto-4.jpg" alt="Monitor" id="imagens">
+                    <img src="trabalhos/HTML/img/imagem-produto-4.jpg" alt="Monitor" id="imagens">
                     <h3>Televisão</h3>
                     <p class="price">R$ 5000,00</p>
                     <button class="buy-button" data-quantity="0">Comprar</button>
                   </div>
                   <div class="product-grid-item">
-                    <img src="img/imagem-produto-5.jpg" alt="Câmera" id="imagens">
+                    <img src="trabalhos/HTML/img/imagem-produto-5.jpg" alt="Câmera" id="imagens">
                     <h3>Ryzen</h3>
                     <p class="price">R$ 1000,00</p>
                     <button class="buy-button" data-quantity="0">Comprar</button>
                   </div>
                   <div class="product-grid-item">
-                    <img src="img/imagem-produto-6.jpg" alt="Caixa de som" id="imagens">
+                    <img src="trabalhos/HTML/img/imagem-produto-6.jpg" alt="Caixa de som" id="imagens">
                     <h3>Iphone 11</h3>
                     <p class="price">R$ 6500,00</p>
                     <button class="buy-button" data-quantity="0">Comprar</button>
@@ -121,38 +121,38 @@
 
               <div class="product-grid">
                   <div class="product-grid-item">
-                    <img src="img/imagem-produto-7.jpg" alt="Mousepad" id="imagens">
+                    <img src="trabalhos/HTML/img/imagem-produto-7.jpg" alt="Mousepad" id="imagens">
                     <h3>Fone Pixel</h3>
                     <p class="price">R$ 400,00</p>
                     <button class="buy-button" data-quantity="0">Comprar</button>
                   </div>
                   
                   <div class="product-grid-item">
-                    <img src="img/imagem-produto-8.jpg" alt="Notebook" id="imagens">
+                    <img src="trabalhos/HTML/img/imagem-produto-8.jpg" alt="Notebook" id="imagens">
                     <h3>Notegamer</h3>
                     <p class="price">R$ 9600,00</p>
                     <button class="buy-button" data-quantity="0">Comprar</button>
                   </div>
                   <div class="product-grid-item">
-                    <img src="img/imagem-produto-9.jpg" alt="Impressora" id="imagens">
+                    <img src="trabalhos/HTML/img/imagem-produto-9.jpg" alt="Impressora" id="imagens">
                     <h3>XboxControl</h3>
                     <p class="price">R$ 300,00</p>
                     <button class="buy-button" data-quantity="0">Comprar</button>
                   </div>
                   <div class="product-grid-item">
-                    <img src="img/imagem-produto-10.jpg" alt="Smartphone" id="imagens">
+                    <img src="trabalhos/HTML/img/imagem-produto-10.jpg" alt="Smartphone" id="imagens">
                     <h3>PS5Control</h3>
                     <p class="price">R$ 300,00</p>
                     <button class="buy-button" data-quantity="0">Comprar</button>
                   </div>
                   <div class="product-grid-item">
-                    <img src="img/imagem-produto-11.jpg" alt="Tablet" id="imagens">
+                    <img src="trabalhos/HTML/img/imagem-produto-11.jpg" alt="Tablet" id="imagens">
                     <h3>Monitor 144hz</h3>
                     <p class="price">R$ 1700,00</p>
                     <button class="buy-button" data-quantity="0">Comprar</button>
                   </div>
                   <div class="product-grid-item">
-                    <img src="img/imagem-produto-12.jpg" alt="Smart TV" id="imagens">
+                    <img src="trabalhos/HTML/img/imagem-produto-12.jpg" alt="Smart TV" id="imagens">
                     <h3>GameChair</h3>
                     <p class="price">R$ 1.500,00</p>
                     <button class="buy-button" data-quantity="0">Comprar</button>             
@@ -161,37 +161,37 @@
 
               <div class="product-grid">
                   <div class="product-grid-item">
-                    <img src="img/imagem-produto-13.jpg" alt="Caixa de som Bluetooth" id="imagens">
+                    <img src="trabalhos/HTML/img/imagem-produto-13.jpg" alt="Caixa de som Bluetooth" id="imagens">
                     <h3>Golden TV</h3>
                     <p class="price">R$ 15000,00</p>
                     <button class="buy-button" data-quantity="0">Comprar</button>
                   </div>
                   <div class="product-grid-item">
-                    <img src="img/imagem-produto-14.jpg" alt="Fone de ouvido" id="imagens">
+                    <img src="trabalhos/HTML/img/imagem-produto-14.jpg" alt="Fone de ouvido" id="imagens">
                     <h3>Blue Chair</h3>
                     <p class="price">R$ 1400,00</p>
                     <button class="buy-button" data-quantity="0">Comprar</button>
                   </div>
                   <div class="product-grid-item">
-                    <img src="img/imagem-produto-15.jpg" alt="Câmera fotográfica" id="imagens">
+                    <img src="trabalhos/HTML/img/imagem-produto-15.jpg" alt="Câmera fotográfica" id="imagens">
                     <h3>Mouse Pixel</h3>
                     <p class="price">R$ 400,00</p>
                     <button class="buy-button" data-quantity="0">Comprar</button>
                   </div>
                   <div class="product-grid-item">
-                    <img src="img/imagem-produto-16.jpg" alt="Caixa de ferramentas" id="imagens">
+                    <img src="trabalhos/HTML/img/imagem-produto-16.jpg" alt="Caixa de ferramentas" id="imagens">
                     <h3>Alexa</h3>
                     <p class="price">R$ 300,00</p>
                     <button class="buy-button" data-quantity="0">Comprar</button>
                   </div>
                   <div class="product-grid-item">
-                    <img src="img/imagem-produto-17.jpg" alt="Aspirador de pó" id="imagens">
+                    <img src="trabalhos/HTML/img/imagem-produto-17.jpg" alt="Aspirador de pó" id="imagens">
                     <h3>Gold Alexa</h3>
                     <p class="price">R$ 500,00</p>
                     <button class="buy-button" data-quantity="0">Comprar</button>
                   </div>
                   <div class="product-grid-item">
-                    <img src="img/imagem-produto-18.jpg" alt="Console de videogame" id="imagens">
+                    <img src="trabalhos/HTML/img/imagem-produto-18.jpg" alt="Console de videogame" id="imagens">
                     <h3>Gabinete</h3>
                     <p class="price">R$ 300,00</p>
                     <button class="buy-button" data-quantity="0">Comprar</button>
@@ -202,6 +202,6 @@
         </div>
       </div>
       <!-- Esse script linkará com outros -->
-      <script src="JS/script.js"></script>
+      <script src="trabalhos/HTML/JS/script.js"></script>
   </body>
 </html>
